2008-09-25  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-index.c (tracker_db_index_open): Be
	more graceful when the index is already open.
	* src/tracker-indexer/tracker-indexer.c (check_started): Reopen the
	indexes if needed.
	(handle_metadata_add) (handle_metadata_remove): Check that the indexer
	is running and fine.
	(tracker_indexer_get_running): Check also for the "stopped" flag.
	* src/tracker-indexer/tracker-metadata.c (tracker_metadata_insert):
	Plug a potential leak.

2008-09-25  Martyn Russell  <martyn@imendio.com>

	* Makefile.am:
	* data/services/Makefile.am: Added install hooks to clean up old
	locations for binaries from TRUNK. This way when replacing TRUNK
	with indexer-split, people shouldn't get run the wrong binaries if
	they are still in their $prefix.

2008-09-23  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-db.c
	(tracker_db_create_array_of_services): Added missing "Files"
	category. The queries were returning less results than expected
	due to the lack of this category.
	
2008-09-21  Martyn Russell  <martyn@imendio.com>

	* src/tracker-extract/tracker-extract-mp3.c: 
	* src/tracker-extract/tracker-extract.c:
	* src/tracker-indexer/tracker-main.c:
	* src/tracker-indexer/tracker-metadata-utils.c:
	* src/tracker-thumbnailer/tracker-thumbnailer.c:
	* src/trackerd/tracker-main.c: Use G_OS_WIN32 instead of OS_WIN32.

2008-09-21  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/evolution.c (get_message_encoding):
	Remove debug g_print()

2008-09-21  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/evolution.c (get_message_encoding)
	(get_text_for_mbox): Try to convert message contents to UTF8 based on
	the charset specified by the Content-Type header.

2008-09-21  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-common/tracker-service.c (service_finalize): Plug a
	leak.

2008-09-21  Carlos Garnacho  <carlos@imendio.com>
